= Supernaut.FX Changes
:homepage: https://github.com/SupernautApp/SupernautFX

A high-level view of the changes in each SupernautFX release.

== v0.1.1-SNAPSHOT

Released: Under development

=== Dependency Upgrades

* JavaFX 15.0.1
* Micronaut 2.3.1

=== Sample Apps

* Use new Supernaut Icon for MacOS builds (Linux, Windows icon config TBD)

=== Build

* Use `languageVersion = JavaLanguageVersion.of` in `build.gradle` and use JDK 16 toolchain for build/test
* Github Actions: Build with JDK 16 (but run Gradle with JDK 15)
* Travis CI: Update Linux distro to `focal` (Ubuntu 20.04 LTS)
* Gradle 6.8
* Badass JLink Plugin 2.23.3
* Spock 2.0-M4-groovy-3.0
* Micronaut Test Spock micronaut-test-spock 2.3.2
* Groovy 3.0.7

== v0.1.0

Released: 2020.10.21

=== app.supernaut

* Remove `slf4j-api` dependency

=== app.supernaut.fx

* Remove dependency on JavaFX :mac JARs from POMs. (JavaFX Gradle Plugin does this unintentionally)
* Remove dependency on `javax.inject`

=== app.supernaut.fx.micronaut

* Upgrade to Micronaut 2.1.2
* Remove dependency on JavaFX :mac JARs from POMs. (JavaFX Gradle Plugin does this unintentionally)
* Change `api` dependency from `micronaut-inject-java` to `micronaut-inject` (reduces transitive dependencies)

=== Sample Apps

* Finer-grained dependencies in apps (see https://github.com/SupernautApp/SupernautFX/commit/3723c1397a34b08e9922ecc2a8321f627cf4c74f[3723c13])
* Upgrade to BadAss JLink Plugin 2.22.1

=== Build

* Don't use JavaFX Gradle Plugin
* Use simple `JavaFXPlatformPlugin` (in `buildSrc`) to compute `ext.jfxPlatform` value for JavaFX dependencies.

== v0.0.9

Released: 2020.10.14

=== Library

* Classes are refactored into three JMS modules (3 JARs):
** `app.supernaut` (was package `org.consensusj.supernaut`)
** `app.supernaut.fx` (was package  `org.consensusj.supernautfx`)
** `app.supernaut.fx.micronaut` (was package  `org.consensusj.supernautfx.micronaut`)